5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4157/executions/1575_1560.log
== TEST (2019-03-12 21:51:24) 
-- CODE:
string = " Augusta Ada Byron, a Condessa de Lovelace, naceu em 1815, na Inglaterra."
print(string.???.lower())
-- ERROR:
File "XXXX", line 2
    print(string.???.lower())
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:51:33) 
-- CODE:
string = " Augusta Ada Byron, a Condessa de Lovelace, naceu em 1815, na Inglaterra."
print(string.lower())
-- OUTPUT:
augusta ada byron, a condessa de lovelace, naceu em 1815, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:51:38) 
-- CODE:
string = " Augusta Ada Byron, a Condessa de Lovelace, naceu em 1815, na Inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.177539
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, naceu em 1815, na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:51:48) 
-- CODE:
string = " Augusta Ada Byron, a Condessa de Lovelace, naceu em 1815, na Inglaterra."
print(string.lower().)
-- EXECUTION TIME:
0.162314
-- ERROR:
  File "/home/codebench/codes/1575/1560/main.py", line 2
    print(string.lower().)
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:52:43) 
-- CODE:
string = " Augusta Ada Byron, a Condessa de Lovelace, naceu em 1815, na Inglaterra.lower()"
print(string.???)
-- EXECUTION TIME:
0.184206
-- ERROR:
  File "/home/codebench/codes/1575/1560/main.py", line 2
    print(string.???)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:52:45) 
-- CODE:
string = " Augusta Ada Byron, a Condessa de Lovelace, naceu em 1815, na Inglaterra.lower()"
print(string.???)
-- ERROR:
File "XXXX", line 2
    print(string.???)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:54:01) 
-- CODE:
string = " Augusta Ada Byron, a Condessa de Lovelace, naceu em 1815, na Inglaterra.".lower()
print(string.???)
-- EXECUTION TIME:
0.212358
-- ERROR:
  File "/home/codebench/codes/1575/1560/main.py", line 2
    print(string.???)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:54:11) 
-- CODE:
string = " Augusta Ada Byron, a Condessa de Lovelace, naceu em 1815, na Inglaterra.".lower()
print(string.)
-- EXECUTION TIME:
0.193848
-- ERROR:
  File "/home/codebench/codes/1575/1560/main.py", line 2
    print(string.)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:54:13) 
-- CODE:
string = " Augusta Ada Byron, a Condessa de Lovelace, naceu em 1815, na Inglaterra.".lower()
print(string.)
-- ERROR:
File "XXXX", line 2
    print(string.)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:54:32) 
-- CODE:
string = " Augusta Ada Byron, a Condessa de Lovelace, naceu em 1815, na Inglaterra."lower()
print(string.lower)
-- ERROR:
File "XXXX", line 1
    string = " Augusta Ada Byron, a Condessa de Lovelace, naceu em 1815, na Inglaterra."lower()
                                                                                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:54:40) 
-- CODE:
string = " Augusta Ada Byron, a Condessa de Lovelace, naceu em 1815, na Inglaterra."
print(string.lower)
-- EXECUTION TIME:
0.233065
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
<built-in method lower of str object at 0x7ff48b6ab9b0>
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:54:44) 
-- CODE:
string = " Augusta Ada Byron, a Condessa de Lovelace, naceu em 1815, na Inglaterra."
print(string.lower)
-- OUTPUT:
<built-in method lower of str object at 0x7f16bf7b9730>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:54:53) 
-- CODE:
string = " Augusta Ada Byron, a Condessa de Lovelace, naceu em 1815, na Inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.223292
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, naceu em 1815, na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:54:56) 
-- CODE:
string = " Augusta Ada Byron, a Condessa de Lovelace, naceu em 1815, na Inglaterra."
print(string.lower())
-- OUTPUT:
augusta ada byron, a condessa de lovelace, naceu em 1815, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:35:40) 
-- CODE:
string = " Augusta Ada Byron, a Condessa de Lovelace, naceu em 1815, na Inglaterra."
print(string.lower())
-- OUTPUT:
augusta ada byron, a condessa de lovelace, naceu em 1815, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:35:46) 
-- CODE:
string = " Augusta Ada Byron, a Condessa de Lovelace, naceu em 1815, na Inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.140944
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, naceu em 1815, na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:36:09) 
-- CODE:
string = " Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.19706
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
